css/enbridge.css
/* ... */
  .enbridge-content-container .enbridge-form .zip-code-tool .opener,
  .enbridge-content-container .enbridge-form .zip-code-tool .tool {
    border: 1px solid #ebecee;
    margin: 0 auto 0 10px;
    position: relative;
    width: 314px;
    background-color: #f3f4f7; }
  .enbridge-content-container .enbridge-form .zip-code-tool .opener {
    font-size: 11px;
    padding: 11px 15px;
    cursor: pointer; }
    .enbridge-content-container .enbridge-form .zip-code-tool .opener i {
      border-radius: 50%;
      display: inline-block;
      font-style: italic;
      font-size: 12px;
      line-height: 1.4;
      margin: 0 5px;
      height: 15px;
      width: 15px;
      text-align: center;
      color: white;
      background-color: #92b051; }
    .enbridge-content-container .enbridge-form .zip-code-tool .opener:after {
      content: '>';
      position: absolute;
      right: 15px;
      color: #ddd6cc; }
  .enbridge-content-container .enbridge-form .zip-code-tool .tool {
    display: block;
    padding: 0 15px; }
  .enbridge-content-container .enbridge-form .zip-code-tool.closed .tool {
    display: none; }
  .enbridge-content-container .enbridge-form .zip-code-tool.closed .result {
    display: none; }
  .enbridge-content-container .enbridge-form .zip-code-tool.opened .opener {
    display: none; }
  .enbridge-content-container .enbridge-form .zip-code-tool.opened .tool {
    height: 175px; }
    .enbridge-content-container .enbridge-form .zip-code-tool.opened .tool p {
      font-size: 11px;
      margin: 0;
      padding-left: 0;
      padding-right: 0; }
    .enbridge-content-container .enbridge-form .zip-code-tool.opened .tool input:not(.enbridge-btn) {
      display: block;
      margin: 0 auto 20px auto;
      width: 200px; }
  .enbridge-content-container .enbridge-form .zip-code-tool.opened:not(.success-zip) {
    margin-bottom: 57px; }
  .enbridge-content-container .enbridge-form .zip-code-tool .input-error {
    margin-bottom: 10px !important; }
    .enbridge-content-container .enbridge-form .zip-code-tool .input-error + .error-message {
      margin: 0 auto !important;
      width: 200px; }
  .enbridge-content-container .enbridge-form .zip-code-tool .result {
    margin-left: -15px;
    width: 364px; }
    .enbridge-content-container .enbridge-form .zip-code-tool .result img {
      width: 6%; }
.enbridge-content-container .enbridge-form .label-info {
  font-size: 10px;
  display: block;
  margin: 0 auto; }
.enbridge-content-container .enbridge-form.form-horizontal > .form-group {
  overflow: hidden; }
  .enbridge-content-container .enbridge-form.form-horizontal > .form-group > label.control-label {
    float: left;
    font-weight: normal;
    width: 80px;
    text-align: left; }
  .enbridge-content-container .enbridge-form.form-horizontal > .form-group > div.fields {
    float: right;
    width: 200px;
    text-align: left; }
    .enbridge-content-container .enbridge-form.form-horizontal > .form-group > div.fields input[type='text'] {
      margin-left: 0;
      margin-top: 0;
      margin-bottom: 0; }
.enbridge-content-container .enbridge-form.form-horizontal .control-label {
  padding-top: 11px;
  margin-bottom: 0;
  text-align: right;
  display: block; }
.enbridge-content-container .result {
  border-radius: 4px;
  border-width: 1px;
  border-style: solid;
  display: none;
  margin: 11px auto 11px auto;
  padding: 8px 15px; }
  .enbridge-content-container .result > span {
    display: inline-block;
    padding-left: 10px;
    vertical-align: middle;
    width: 92%; }
  .enbridge-content-container .result > img {
    vertical-align: middle;
    width: 7%; }
  .enbridge-content-container .result.success-code {
    background-color: #e9efdc;
    border-color: #82a041;
    display: block;
    color: #92b051; }
  .enbridge-content-container .result.error-code {
    background-color: #f9e5ea;
    border-color: #e18396;
    display: block;
    color: #e18396; }
.enbridge-content-container .error-message {
  font-size: 10px !important;
  margin-top: 5px;
  color: red; }
.enbridge-content-container .enbridge-dropdown {
  display: block;
  position: relative;
  margin-bottom: 15px;
  min-width: 180px; }
  .enbridge-content-container .enbridge-dropdown .header {
    border: 1px solid #40484d;
    border-radius: 4px;
    display: block;
    height: 44px;
    width: 100%;
    padding: 14px;
    position: relative;
    background-color: white;
    background-image: none;
    cursor: pointer; }
    .enbridge-content-container .enbridge-dropdown .header .selected {
      display: block;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis; }
    .enbridge-content-container .enbridge-dropdown .header .indicator {
      padding: 14px;
      position: absolute !important;
      right: 0;
      top: 0;
      text-align: center;
      line-height: 1.5;
      height: 42px;
      width: 43px;
      color: white;
      background-color: #40484d; }
      .enbridge-content-container .enbridge-dropdown .header .indicator:after {
        content: '';
        width: 0;
        height: 0;
        border-style: solid;
        border-width: 5px 5px 0 5px;
        border-color: white transparent transparent transparent;
        line-height: 2.5; }
  .enbridge-content-container .enbridge-dropdown .list-items {
    border-bottom-color: #40484d;
    border-style: solid;
    border-top-width: 0;
    border-left-width: 1px;
    border-right-width: 1px;
    border-bottom-width: 1px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    font-size: 12px;
    list-style: none;
    padding: 0;
    position: absolute;
    margin: 0;
    width: 100%;
    background-color: white;
    z-index: 500; }
    .enbridge-content-container .enbridge-dropdown .list-items .list-item {
      font-size: 12px;
      padding: 14px;
      cursor: pointer; }
      .enbridge-content-container .enbridge-dropdown .list-items .list-item:hover {
        background-color: #ddd6cc; }
/* ... */

